All responsive update

--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,14 @@
     width: 70%;
   }
 
+  h1 {
+    font-size: 1.3rem !important;
+  }
+
+  h2 {
+    font-size: 1.1rem !important;
+  }
+
   h3 {
     font-size: 1rem !important;
   }
@@ -213,6 +221,13 @@
     font-size: 0.8rem !important;
   }
 
+  button {
+    font-size: 0.8rem !important;
+    margin: 0.5rem !important;
+    padding: 0.6rem !important;
+    min-width: fit-content;
+  }
+
   .section-1 {
     padding: 0.2rem !important;
   }
@@ -228,11 +243,6 @@
   .section-2 h2 {
     font-size: 1rem !important;
   }
-  .section-2 button {
-    font-size: 0.8rem;
-    margin: 0.5rem !important;
-    padding: 0.6rem !important;
-  }
 
   .section-3 button {
     font-size: 0.7rem !important;
@@ -242,6 +252,10 @@
   .section-3 .numbered-list li::before {
     left: 0rem !important;
     top: 0.8rem !important;
+  }
+
+  article .menu h2::before {
+    top: 3.5rem !important;
   }
 
   footer ul {
@@ -458,7 +472,7 @@ footer p {
 header .fa-arrow-left {
   color: #353535;
   position: absolute;
-  left: 1rem;
+  left: 2%;
   top: 1.5rem;
   font-size: 1.3rem;
   line-height: 1rem;
