--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -2,7 +2,7 @@ header{
     .fa-arrow-left{
         color: $dark-grey;
         position: absolute;
-        left: 1rem;
+        left: 2%;
         top: 1.5rem;
         font-size: 1.3rem;
         line-height: 1rem;
