--- a/sass/layout/_media-queries.scss
+++ b/sass/layout/_media-queries.scss
@@ -1,3 +1,4 @@
+/* Above 768px */
 @media #{$medium-up} {
     header{
         height: 4rem;
@@ -19,9 +20,10 @@
         margin: auto;
         & .section-1{
             position: absolute;
-            top: 1.3rem;
+            top: 1.7rem;
             right: 1rem;
             border-radius: 5rem;
+            font-size: 0.8rem;
         }
         & .section-2{
             width: 50%;
@@ -89,6 +91,7 @@
     }
 }
 
+/* between 576px & 768px */
 @media screen and (min-width: $small) and (max-width: $medium) {
     .section-3 {
         margin: auto !important;
@@ -103,6 +106,7 @@
     }
 }
 
+/* Under 280px */
 @media #{$x-small-down}{
     header{
         & img{
@@ -143,7 +147,7 @@
         }
     }
     .section-2{
-        padding: $padding !important;
+        padding: 1.5rem !important;
         & h2{
             font-size: 1rem !important;
         }
