--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -1,3 +1,4 @@
+/* Styling header arrow*/
 header{
     .fa-arrow-left{
         color: $dark-grey;
@@ -15,6 +16,7 @@ header{
     flex-direction: column-reverse;
 }
 
+/* Styling menu */
 article{
     border-radius: 2rem;
     margin-top: -2rem;
@@ -40,12 +42,14 @@ article{
         font-weight: normal;
         margin: 1rem;
     }
+    /* Styling starter/main/desert boxes */
     & .menu{
         padding: $padding;
         position: relative;
         & h2{
             text-transform: uppercase;
-            font-weight: 300;      
+            font-weight: 300;
+            margin-bottom: 2rem;     
             &::before{
                 content: "";
                 position: absolute;
@@ -55,6 +59,7 @@ article{
                 top:4.3rem;
             }     
         }
+        /* Styling dish line & hover effect */
         &__dishcard{
             background-color: #fff;border-radius: 1rem;
             box-shadow: $box-shadow;
@@ -129,6 +134,7 @@ article{
             transition: width 400ms ease-in-out;
         }
     }
+    /* Order button */
     & .button-restaurant{
         display: flex;
         width: 100%;
@@ -143,6 +149,7 @@ article{
     }
 }
 
+/* Styling restaurant top image */
 aside>img{
     width: 100%;
     object-fit: cover;
