--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 @import "./utils/responsive";
 @import "./utils/mixins";
 @import "./utils/keyframes";
-@import "./layout/loading-bar";
+@import "./layout/loading-spinner";
 @import "./layout/fade-in";
 @import "./layout/media-queries";
 @import "./pages/header";
