--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,4 @@
+// Colors
 $primary:#9356DC;
 $secondary:#FF79DA;
 $tertiary:#99E2D0;
@@ -7,19 +8,18 @@ $light-grey: #f6f6f6;
 $dark-grey:#353535;
 $grey-icons: #7e7e7e;
 $hover-fonction-buttons: #f5edff;
-
+// Pink button gradient
+$background-button: linear-gradient(329deg, var(--c1, lighten($secondary, 20%)), var(--c2, $primary) 70%, var(--c1, $secondary)) var(--x, 0)/ 400%;
+// Font
 $logotitlefont:'Shrikhand', cursive;
 $mainfont:'Roboto', sans-serif;
-
+// Boxes shadows
 $box-shadow: 0 0.2rem 0.3rem rgb(0 0 0 / 30%);
-
 $box-shadow-hover: 0 0.2rem 0.3rem rgb(0 0 0 / 70%);
-
+// Layout
 $margin:1rem;
 $padding:1rem;
-
-$background-button: linear-gradient(329deg, var(--c1, lighten($secondary, 20%)), var(--c2, $primary) 70%, var(--c1, $secondary)) var(--x, 0)/ 400%;
-
+// Animations timing
 $prog-bar-dur: 1500ms;
 $prog-bar-delay: 200ms;
 $progress-after-delay: $prog-bar-dur + $prog-bar-delay*2;
