--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,7 @@ header .fa-arrow-left {
   padding: 0 0.5rem;
 }
 
-.main_lapalettedugout {
+.main_restaurants {
   display: flex;
   flex-direction: column-reverse;
 }
@@ -509,7 +509,8 @@ article {
 article .title-restaurant-page {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 0 1rem;
 }
 article .title-restaurant-page i {
   padding: 1rem;
@@ -529,7 +530,7 @@ article h1 {
   margin: 1rem;
 }
 article .menu {
-  padding: 1rem;
+  padding: 1rem 1rem 0;
   position: relative;
   /* Styling dish line & hover effect */
 }
@@ -645,6 +646,7 @@ article .button-restaurant button:hover {
 aside > img {
   width: 100%;
   object-fit: cover;
+  max-height: 16rem;
 }
 
 * {
