--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,5 +1,5 @@
 /* Keyframes landing page loading spinner */
-@keyframes progress-bar{
+@keyframes loading-spinner{
     0% {
         transform: rotate(0deg) scale(0.1);
     }
