--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Keyframes landing page loading spinner */
-@keyframes progress-bar {
+@keyframes loading-spinner {
   0% {
     transform: rotate(0deg) scale(0.1);
   }
@@ -63,11 +63,11 @@
   top: 20%;
   width: 8rem;
   height: 8rem;
-  animation: progress-bar 1500ms 200ms ease-in-out;
+  animation: loading-spinner 1000ms 200ms ease-in-out;
 }
 
 .progress-after {
-  animation: progress-after 0ms 1900ms both;
+  animation: progress-after 0ms 1000ms both;
 }
 
 /* Restaurant pages fade in loading effect */
