--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,33 @@
 /* Keyframes landing page loading spinner */
+@-webkit-keyframes loading-spinner {
+  0% {
+    transform: rotate(0deg) scale(0.1);
+  }
+  12% {
+    transform: rotate(45deg) scale(0.4);
+  }
+  25% {
+    transform: rotate(90deg) scale(0.7);
+  }
+  37% {
+    transform: rotate(135deg) scale(1);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.5);
+  }
+  62% {
+    transform: rotate(225deg) scale(3);
+  }
+  75% {
+    transform: rotate(270deg) scale(7);
+  }
+  87% {
+    transform: rotate(315deg) scale(50);
+  }
+  100% {
+    transform: rotate(360deg, 0) scale(1000, 0);
+  }
+}
 @keyframes loading-spinner {
   0% {
     transform: rotate(0deg) scale(0.1);
@@ -28,6 +57,14 @@
     transform: rotate(360deg, 0) scale(1000, 0);
   }
 }
+@-webkit-keyframes progress-after {
+  0% {
+    transform: translateX(-9999px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 @keyframes progress-after {
   0% {
     transform: translateX(-9999px);
@@ -37,6 +74,15 @@
   }
 }
 /* Keyframes gradual loading menu pages */
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+  }
+}
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -63,27 +109,35 @@
   top: 20%;
   width: 8rem;
   height: 8rem;
-  animation: loading-spinner 1000ms 200ms ease-in-out;
+  -webkit-animation: loading-spinner 1500ms 200ms ease-in-out;
+  animation: loading-spinner 1500ms 200ms ease-in-out;
 }
 
 .progress-after {
-  animation: progress-after 0ms 1000ms both;
+  -webkit-animation: progress-after 0ms 1900ms both;
+  animation: progress-after 0ms 1900ms both;
 }
 
 /* Restaurant pages fade in loading effect */
 .fade-in {
   opacity: 0;
+  -webkit-animation: fadeIn ease-in 1;
   animation: fadeIn ease-in 1;
+  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
   animation-duration: 1s;
 }
 .fade-in.one {
+  -webkit-animation-delay: 0.7s;
   animation-delay: 0.7s;
 }
 .fade-in.two {
+  -webkit-animation-delay: 1.2s;
   animation-delay: 1.2s;
 }
 .fade-in.three {
+  -webkit-animation-delay: 1.6s;
   animation-delay: 1.6s;
 }
 
@@ -229,6 +283,8 @@
     font-size: 0.8rem !important;
     margin: 0.5rem !important;
     padding: 0.6rem !important;
+    min-width: -webkit-fit-content;
+    min-width: -moz-fit-content;
     min-width: fit-content;
   }
 
@@ -289,6 +345,22 @@ header {
   border: none;
   background-color: transparent;
 }
+.section-1 ::-webkit-input-placeholder {
+  color: #000;
+  text-align: center;
+}
+.section-1 ::-moz-placeholder {
+  color: #000;
+  text-align: center;
+}
+.section-1 :-ms-input-placeholder {
+  color: #000;
+  text-align: center;
+}
+.section-1 ::-ms-input-placeholder {
+  color: #000;
+  text-align: center;
+}
 .section-1 ::placeholder {
   color: #000;
   text-align: center;
@@ -348,6 +420,7 @@ header {
   list-style-type: none;
   font-size: 0.9rem;
   line-height: 1.5rem;
+  -webkit-padding-start: 0;
   padding-inline-start: 0;
 }
 .section-3 .numbered-list li {
@@ -400,6 +473,8 @@ header {
 }
 .section-4 .cards {
   background-color: #fff;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin: 1rem 0;
   border-radius: 1rem;
@@ -423,6 +498,7 @@ header {
 .section-4 .cards img {
   width: 100%;
   height: 8rem;
+  -o-object-fit: cover;
   object-fit: cover;
   border-radius: 1rem 1rem 0 0;
 }
@@ -457,6 +533,7 @@ footer {
   padding: 2rem;
 }
 footer img {
+  -webkit-filter: invert(100%);
   filter: invert(100%);
   width: 30%;
 }
@@ -645,6 +722,7 @@ article .button-restaurant button:hover {
 /* Styling restaurant top image */
 aside > img {
   width: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
   max-height: 16rem;
 }
@@ -656,5 +734,3 @@ aside > img {
 .display-none {
   display: none;
 }
-
-/*# sourceMappingURL=style.css.map */
