--- a/sass/layout/_fade-in.scss
+++ b/sass/layout/_fade-in.scss
@@ -1,16 +1,22 @@
 /* Restaurant pages fade in loading effect */
 .fade-in{
     opacity: 0;
-    animation: fadeIn ease-in 1;
-    animation-fill-mode:both;
-    animation-duration:1s;
+    -webkit-animation: fadeIn ease-in 1;
+            animation: fadeIn ease-in 1;
+    -webkit-animation-fill-mode:both;
+            animation-fill-mode:both;
+    -webkit-animation-duration:1s;
+            animation-duration:1s;
     &.one{
-        animation-delay: 0.7s;
+        -webkit-animation-delay: 0.7s;
+                animation-delay: 0.7s;
     }
     &.two{
-        animation-delay: 1.2s;
+        -webkit-animation-delay: 1.2s;
+                animation-delay: 1.2s;
     }
     &.three{
-        animation-delay: 1.6s;
+        -webkit-animation-delay: 1.6s;
+                animation-delay: 1.6s;
     }
 }
