--- a/sass/layout/_media-queries.scss
+++ b/sass/layout/_media-queries.scss
@@ -136,6 +136,8 @@
         font-size: 0.8rem !important;
         margin: 0.5rem !important;
         padding: 0.6rem !important;
+        min-width: -webkit-fit-content;
+        min-width: -moz-fit-content;
         min-width: fit-content;
     }
     .section-1{
