--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -10,6 +10,22 @@
         background-color: transparent;
     }
     /* Styling placeholer search bar txt */
+    & ::-webkit-input-placeholder{
+        color: $black;
+        text-align: center;
+    }
+    & ::-moz-placeholder{
+        color: $black;
+        text-align: center;
+    }
+    & :-ms-input-placeholder{
+        color: $black;
+        text-align: center;
+    }
+    & ::-ms-input-placeholder{
+        color: $black;
+        text-align: center;
+    }
     & ::placeholder{
         color: $black;
         text-align: center;
@@ -60,7 +76,8 @@
         list-style-type: none;
         font-size: 0.9rem;
         line-height: 1.5rem;
-        padding-inline-start: 0;
+        -webkit-padding-start: 0;
+                padding-inline-start: 0;
         & li {
             position: relative;   
             &:before {
@@ -113,6 +130,8 @@
     /* Styling restaurants cards */
     & .cards{
         background-color: #fff;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
         height: fit-content;
         margin: $margin 0;
         border-radius: 1rem;
@@ -135,7 +154,8 @@
         & img{
             width: 100%;
             height: 8rem;
-            object-fit: cover;
+            -o-object-fit: cover;
+               object-fit: cover;
             border-radius: 1rem 1rem 0 0;
         }
         &__text{
