--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -153,6 +153,7 @@ article{
 /* Styling restaurant top image */
 aside>img{
     width: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     max-height: 16rem;
 }
