--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -56,7 +56,7 @@ article{
                 position: absolute;
                 background-color: $tertiary;
                 width: 2.5em;
-                height: 0.2rem;
+                height: 4px;
                 top:4.3rem;
             }     
         }
