--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -20,4 +20,5 @@
     background: linear-gradient(to right, $secondary 0%, $primary 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    transition: all 1000ms ease-in-out;
 }
