Modif restaurant pages loading effect

--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -84,18 +84,22 @@
 @-webkit-keyframes fadeIn {
     from {
       opacity: 0;
+      transform: translateY(5%);
     }
     to {
       opacity: 1;
+      transform: translateY(0%);  
     }
   
 }
 @keyframes fadeIn {
     from {
       opacity: 0;
+      transform: translateY(5%);
     }
     to {
       opacity: 1;
+      transform: translateY(0%);
     } 
   
 }
