--- a/css/style.css
+++ b/css/style.css
@@ -83,17 +83,21 @@
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
+    transform: translateY(5%);
   }
   to {
     opacity: 1;
+    transform: translateY(0%);
   }
 }
 @keyframes fadeIn {
   from {
     opacity: 0;
+    transform: translateY(5%);
   }
   to {
     opacity: 1;
+    transform: translateY(0%);
   }
 }
 .progress {
