--- a/css/style.css
+++ b/css/style.css
@@ -534,9 +534,7 @@ header {
   background: linear-gradient(to right, #FF79DA 0%, #9356DC 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: heart-fill ease-in 1;
-  animation-fill-mode: both;
-  animation-duration: 500ms;
+  transition: all 500ms ease-in-out;
 }
 
 footer {
@@ -611,9 +609,7 @@ article .title-restaurant-page i:hover {
   background: linear-gradient(to right, #FF79DA 0%, #9356DC 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: heart-fill ease-in 1;
-  animation-fill-mode: both;
-  animation-duration: 500ms;
+  transition: all 500ms ease-in-out;
 }
 article h1 {
   font-family: "Shrikhand", cursive;
