--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -20,7 +20,5 @@
     background: linear-gradient(to right, $secondary 0%, $primary 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: heart-fill ease-in 1;
-    animation-fill-mode: both;
-    animation-duration: 500ms;
+    transition: all 500ms ease-in-out;
 }
