--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -1,3 +1,11 @@
+*{
+    font-family: $mainfont;
+}
+
+.display-none{
+    display: none;
+}
+
 /* Section 1 search bar */
 .section-1{
     box-shadow: inset $box-shadow;
@@ -182,4 +190,4 @@
     & :hover > i{
         @include heart-fill;
     }
-}
+}   
