--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,7 +2,7 @@
 $primary:#9356DC;
 $secondary:#FF79DA;
 $tertiary:#99E2D0;
-$black: #000 !default;
+$black: #000;
 $grey: #eaeaea;
 $light-grey: #f6f6f6;
 $dark-grey:#353535;
